--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "whatsbutton",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "WhatsApp Floating Button",
   "main": "gulpfile.js",
   "scripts": {
@@ -29,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/mavisland/whatsbutton/issues"
   },
-  "homepage": "https://github.com/mavisland/whatsbutton#readme",
+  "homepage": "https://github.com/mavisland/whatsbutton",
   "devDependencies": {
     "autoprefixer": "^9.7.6",
     "cross-env": "^7.0.3",
@@ -37,6 +37,7 @@
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-header": "^2.0.9",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.0",
     "gulp-rename": "^2.0.0",
